# Aether-Lang

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build_error.txt  build_error_utf8.txt  build_errors.txt  check_log.txt  git_push_error.txt  lang_errors.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md
aegis-cli/src/: main.rs
aegis-core/: Cargo.toml
aegis-core/src/: aether.rs  governor.rs  lib.rs  manifold.rs  state.rs  topology.rs
aegis-core/src/ml/: benchmark.rs  classification.rs  clustering.rs  convergence.rs  linalg.rs  mod.rs  neural.rs  regressor.rs
aegis-kernel/: Cargo.toml
aegis-kernel/src/: allocator.rs  lib.rs  loader.rs  main.rs  scheduler.rs  serial.rs
aegis-kernel/src/boot/: bios.rs  topology.rs
aegis-lang/: Cargo.toml
aegis-lang/src/: ascii_render.rs  ast.rs  interpreter.rs  lexer.rs  lib.rs  mod.rs  parser.rs  webgl_export.rs
aether-core/src/: memory.rs
crates/aether-core/src/: manifold.rs  topology.rs
docs/: AEGIS_LLM_SPECS.md  API.md  ARCHITECTURE.md  BIOS_PRD.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  LANGUAGE.md  MATHEMATICS.md  OS_DEVELOPMENT.md  TUTORIAL.md
src/: aether.rs  governor.rs  interrupts.rs  lib.rs  manifold.rs  state.rs  tests.rs  topology.rs
src/benchmarks/: governor_bench.rs  mod.rs  topology_bench.rs
src/lang/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/ml/: convergence.rs  mod.rs  regressor.rs
